@@ -1,1 +1,35 @@
 # Magasiniere
+Project: Magainiere
+Members: 
+Abdul Manan, CMS 303323, BSCS 9A
+Tafheem Ul Islam, CMS 321906, BSCS 9A
+Hammad Saleem, CMS 306647, BSCS 9A
+The Project folder contains
+1.	Project Report
+2.	Project Poster
+3.	Project Presentation
+4.	Magasinere folder (Source code is in this file)
+5.	UML diagrams
+6.	Demo video
+How to run the program:
+1.	Open the project ‘Magasinere’ folder in IntelliJ Idea IDE.
+2.	Add JavaFx library.
+3.	Add the following line in VM options of MainMenu.java
+--module-path "PATH of lib folder of javafx sdk folder" --add-modules javafx.controls,javafx.fxml,javafx.media
+
+For example,
+--module-path "C:\javafx-sdk-14.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.media
+
+4.	Run the class ‘MainMenu.java’ 
+How to play the game:
+5.	To start the game, click new game.
+6.	Select level of your choice.
+7.	To move the player up, down, left, right use W,A,S,D keys.
+8.	To restart the level, press R.
+9.	To go to next level, press N.
+10.	To go to previous level, press B
+11.	To go to Main Menu, press Esc.
+12.	To mute the background music, check off Background Music box on Main Menu.
+13.	Put all crates on their marked positions to clear the level.
+Hope you like our efforts
+ENJOY THE GAME!
